fix: overflow-x chat__messages

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -128,6 +128,7 @@ button:disabled {
     height: 30%;
     padding: 24px 24px 0 24px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 /* Message Styles */
